# photo

./: CMakeLists.txt  FindGphoto2.cmake  package.xml
include/photo/: photo_camera_list.hpp
src/: CMakeLists.txt
src/libphoto2/: photo_camera.cpp  photo_camera_list.cpp  photo_reporter.cpp
src/photo_node/: photo_node_publish.cpp
trunk/stacks/bosch_drivers/: rosdep.yaml  stack.xml
